--- a/home.html
+++ b/home.html
@@ -102,7 +102,7 @@
   </div>
 
 
-  <h2 style = color:blueviolet >Student Voices</h2>
+  <h2 style = color:aqua >Student Voices</h2>
   <blockquote>
     "Campus Connect made it so easy to find cool events and meet people outside my department!"
     <em>- Layla, Computer Science</em>
